tests/snapshots/codegen_snapshot_tests__match_statements.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_match_simple() {
    let x: i64 = 42;
    let _ = match x {
        0 => {
            let _ = println!("{}", "zero");
        }
        1 => {
            let _ = println!("{}", "one");
        }
        _ => {
            let _ = println!("{}", "other");
        }
    };
}
fn test_match_with_option() {
    let value: Option<i64> = Some(42);
    let _ = match value {
        Some(n) => {
            let _ = println!("{}", n);
        }
        None => {
            let _ = println!("{}", "nothing");
        }
    };
}
fn test_match_multiple_patterns() {
    let x: i64 = 5;
    let _ = match x {
        1 => {
            let _ = println!("{}", "one");
        }
        2 => {
            let _ = println!("{}", "two");
        }
        3 => {
            let _ = println!("{}", "three");
        }
        _ => {
            let _ = println!("{}", "many");
        }
    };
}
fn test_match_with_guard() {
    let x: i64 = 15;
    let _ = match x {
        n if n < 10 => {
            let _ = println!("{}", "small");
        }
        n if n < 20 => {
            let _ = println!("{}", "medium");
        }
        _ => {
            let _ = println!("{}", "large");
        }
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_match_simple();
    let _ = test_match_with_option();
    let _ = test_match_multiple_patterns();
    let _ = test_match_with_guard();
}
