tests/snapshots/codegen_snapshot_tests__mixed_numeric.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn mixed_ops(x: i64, y: f64) -> f64 {
    let a = (x) as f64 + y;
    let b = y + (x) as f64;
    let c = (x) as f64 * y;
    let d = incan_std_core::num::py_div(y, (x) as f64);
    let e = incan_std_core::num::py_div((x) as f64, y);
    let f = (x) as f64 - y;
    return a + b + c + d + e + f;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let result = mixed_ops(2, 3.5);
    let _ = println!("{}", result);
}
