tests/snapshots/codegen_snapshot_tests__model_alias_expressions.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::serde::json;
