tests/snapshots/codegen_snapshot_tests__model_alias_self_access.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[allow(dead_code)]
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Account {
    type_: String,
}
#[allow(dead_code)]
#[allow(non_snake_case, clippy::too_many_arguments)]
fn Account(type_: String) -> Account {
    Account { type_ }
}
#[allow(dead_code)]
impl Account {
    pub fn get_type(&self) -> String {
        return self.type_.clone();
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("type_"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("type")),
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("type"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
