tests/snapshots/codegen_snapshot_tests__model_struct.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct User {
    name: String,
    age: i64,
}
impl incan_stdlib::reflection::HasClassName for User {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for User {
    fn __class_name__() -> &'static str {
        "User"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for User {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for User {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 2] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("name"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("age"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("age"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for User {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "name" => Some(format!("{}", self.name)),
            "age" => Some(format!("{}", self.age)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("name".to_string(), format!("{}", self.name)), ("age".to_string(),
            format!("{}", self.age))
        ]
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let user = User {
        name: "Alice".to_string(),
        age: 30,
    };
    let _ = println!("{}", user.name);
}
