tests/snapshots/codegen_snapshot_tests__model_with_alias.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
#[derive(Debug, Clone, FieldInfo, IncanClass)]
struct Account {
    type_: String,
    class_: String,
    from_: String,
    balance: i64,
    owner_id: i64,
    status_: String,
    created_at: String,
    is_active: bool,
    tags: Vec<String>,
    nick: Option<String>,
    prefs: std::collections::HashMap<String, String>,
    external_id: String,
    one: i64,
    two: i64,
}
#[allow(non_snake_case, clippy::too_many_arguments)]
fn Account(
    type_: String,
    class_: String,
    from_: String,
    balance: i64,
    owner_id: i64,
    status_: String,
    created_at: String,
    is_active: bool,
    tags: Vec<String>,
    nick: Option<String>,
    prefs: std::collections::HashMap<String, String>,
    external_id: String,
    one: i64,
    two: i64,
) -> Account {
    Account {
        type_,
        class_,
        from_,
        balance,
        owner_id,
        status_,
        created_at,
        is_active,
        tags,
        nick,
        prefs,
        external_id,
        one,
        two,
    }
}
impl Account {
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 14] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("type_"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("type")),
                description: Some(incan_stdlib::frozen::FrozenStr::new("Account type")),
                wire_name: incan_stdlib::frozen::FrozenStr::new("type"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("class_"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("class")),
                description: Some(
                    incan_stdlib::frozen::FrozenStr::new("Customer segment"),
                ),
                wire_name: incan_stdlib::frozen::FrozenStr::new("class"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("from_"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("from")),
                description: Some(incan_stdlib::frozen::FrozenStr::new("Source system")),
                wire_name: incan_stdlib::frozen::FrozenStr::new("from"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("balance"),
                alias: None,
                description: Some(
                    incan_stdlib::frozen::FrozenStr::new("Balance in cents"),
                ),
                wire_name: incan_stdlib::frozen::FrozenStr::new("balance"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: true,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("owner_id"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("ownerId")),
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("ownerId"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("status_"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("status")),
                description: Some(
                    incan_stdlib::frozen::FrozenStr::new("Lifecycle status"),
                ),
                wire_name: incan_stdlib::frozen::FrozenStr::new("status"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: true,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("created_at"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("createdAt")),
                description: Some(
                    incan_stdlib::frozen::FrozenStr::new("Creation timestamp (RFC3339)"),
                ),
                wire_name: incan_stdlib::frozen::FrozenStr::new("createdAt"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("is_active"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("isActive")),
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("isActive"),
                type_name: incan_stdlib::frozen::FrozenStr::new("bool"),
                has_default: true,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("tags"),
                alias: None,
                description: Some(incan_stdlib::frozen::FrozenStr::new("Account tags")),
                wire_name: incan_stdlib::frozen::FrozenStr::new("tags"),
                type_name: incan_stdlib::frozen::FrozenStr::new("list[str]"),
                has_default: true,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("nick"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("nickname")),
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("nickname"),
                type_name: incan_stdlib::frozen::FrozenStr::new("Option[str]"),
                has_default: true,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("prefs"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("preferences")),
                description: Some(
                    incan_stdlib::frozen::FrozenStr::new("Account preferences"),
                ),
                wire_name: incan_stdlib::frozen::FrozenStr::new("preferences"),
                type_name: incan_stdlib::frozen::FrozenStr::new("dict[str, str]"),
                has_default: true,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("external_id"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("externalId")),
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("externalId"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("one"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("1")),
                description: Some(
                    incan_stdlib::frozen::FrozenStr::new("Numeric key example"),
                ),
                wire_name: incan_stdlib::frozen::FrozenStr::new("1"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("two"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("t w o")),
                description: Some(
                    incan_stdlib::frozen::FrozenStr::new("whitespace key example"),
                ),
                wire_name: incan_stdlib::frozen::FrozenStr::new("t w o"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
