tests/snapshots/codegen_snapshot_tests__model_with_serde_alias.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
use serde::{Serialize, Deserialize};
#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, FieldInfo, IncanClass)]
struct Account {
    #[serde(rename = "type")]
    type_: String,
    #[serde(rename = "class")]
    class_: String,
    name: String,
}
#[allow(non_snake_case, clippy::too_many_arguments)]
fn Account(type_: String, class_: String, name: String) -> Account {
    Account { type_, class_, name }
}
impl Account {
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 3] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("type_"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("type")),
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("type"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("class_"),
                alias: Some(incan_stdlib::frozen::FrozenStr::new("class")),
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("class"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("name"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
    /// Serialize this model to a JSON string
    pub fn to_json(&self) -> String {
        serde_json::to_string(self)
            .unwrap_or_else(|_| {
                incan_stdlib::errors::raise_json_serialization_error(stringify!(Account))
            })
    }
    /// Deserialize a JSON string into this model
    pub fn from_json(json_str: String) -> Result<Self, String> {
        serde_json::from_str(&json_str)
            .map_err(|e| incan_stdlib::errors::json_decode_error_string(e))
    }
}
