tests/snapshots/codegen_snapshot_tests__models.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use std::collections::HashMap;
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct User {
    name: String,
    age: i64,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    email: String,
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Product {
    id: i64,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    name: String,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    price: f64,
}
#[derive(Clone, Debug, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Config {
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    host: String,
    port: i64,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    timeout: i64,
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct OptionalData {
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    required: String,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    optional: Option<String>,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    maybe_number: Option<i64>,
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct StudentData {
    name: String,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    grades: Vec<i64>,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    metadata: std::collections::HashMap<String, String>,
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Address {
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    street: String,
    city: String,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    zipcode: String,
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Contact {
    name: String,
    address: Address,
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    phone: String,
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Coordinate {
    latitude: f64,
    longitude: f64,
}
fn create_coordinate(lat: f64, lon: f64) -> Coordinate {
    return Coordinate {
        latitude: lat,
        longitude: lon,
    };
}
fn distance_from_origin(coord: Coordinate) -> f64 {
    let lat_sq: f64 = coord.latitude * coord.latitude;
    let lon_sq: f64 = coord.longitude * coord.longitude;
    return lat_sq + lon_sq.powf(0.5f64);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let user: User = User {
        name: "Alice".to_string(),
        age: 30,
        email: "alice@example.com".to_string(),
    };
    println!(
        "{}", { let __parts : [& str; 3usize] = ["User: ", ", Age: ", ""]; let __args :
        Vec < String > = vec![format!("{}", user.name), format!("{}", user.age)];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let product: Product = Product {
        id: 123,
        name: "Laptop".to_string(),
        price: 999.99f64,
    };
    println!(
        "{}", { let __parts : [& str; 2usize] = ["Product ID: ", ""]; let __args : Vec <
        String > = vec![format!("{}", product.id)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let config: Config = Config {
        host: "localhost".to_string(),
        port: 8080,
        timeout: 30,
    };
    println!(
        "{}", { let __parts : [& str; 2usize] = ["Config port: ", ""]; let __args : Vec <
        String > = vec![format!("{}", config.port)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let _data1: OptionalData = OptionalData {
        required: "must have".to_string(),
        optional: Some("optional value".to_string()),
        maybe_number: Some(42),
    };
    let _data2: OptionalData = OptionalData {
        required: "also must have".to_string(),
        optional: None::<_>,
        maybe_number: None::<_>,
    };
    let student: StudentData = StudentData {
        name: "Bob".to_string(),
        grades: vec![85, 90, 88, 92],
        metadata: [
            ("school".to_string(), "MIT".to_string()),
            ("year".to_string(), "2024".to_string()),
        ]
            .into_iter()
            .collect::<HashMap<_, _>>(),
    };
    println!(
        "{}", { let __parts : [& str; 2usize] = ["Student: ", ""]; let __args : Vec <
        String > = vec![format!("{}", student.name)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let coord: Coordinate = create_coordinate(3f64, 4f64);
    let dist: f64 = distance_from_origin(coord);
    println!(
        "{}", { let __parts : [& str; 2usize] = ["Distance: ", ""]; let __args : Vec <
        String > = vec![format!("{}", dist)]; incan_stdlib::strings::fstring(& __parts, &
        __args) }
    );
    let address: Address = Address {
        street: "123 Main St".to_string(),
        city: "Boston".to_string(),
        zipcode: "02101".to_string(),
    };
    let contact: Contact = Contact {
        name: "Charlie".to_string(),
        address: address,
        phone: "555-1234".to_string(),
    };
    println!(
        "{}", { let __parts : [& str; 3usize] = ["Contact: ", " in ", ""]; let __args :
        Vec < String > = vec![format!("{}", contact.name), format!("{}", contact.address
        .city)]; incan_stdlib::strings::fstring(& __parts, & __args) }
    );
}
